<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>decomp_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The decomp_rviz_plugins package</description>

  <maintainer email="sikang@todo.todo">sikang</maintainer>
  <maintainer email="ggeesara@gmail.com">Geesara</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_rendering</depend>
  <depend>decomp_util</depend>
  <depend>decomp_ros_msgs</depend>
  <depend>nav_msgs</depend> 
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
